--- a/style.css
+++ b/style.css
@@ -52,6 +52,10 @@ header.shrink img {
   height: 45px;
 }
 
+.menu-toggle {
+  display: none; /* hidden by default */
+}
+
 /* Hamburger toggle for mobile */
   @media (max-width: 768px) {
     .menu-toggle {
